# percept

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt  run.sh  run_mcp.py
config/: config.json
dashboard/: index.html  server.py
docs/: DECISIONS.md  README.md  ROADMAP.md  api-reference.md  architecture.md  chatgpt-openapi-schema.json  cli-reference.md  configuration.md  contributing.md  game-plan-additions.md  getting-started.md  openclaw-integration.md  percept-protocol.md
landing/: index.html  styles.css
logo/: avatar-variants.html  concept-sonar.html  export-logos.html  export_pngs.py  percept-avatar-dark.html  percept-avatar-white.html  percept-full-dark.html  percept-full-transparent.html  percept-full-white.html  percept-wordmark-dark.html
protocol/: PROTOCOL.md
scripts/: backfill_db.py  backfill_utterances.py  index_vectors.py
src/: action_dispatcher.py  audio_buffer.py  audio_transcriber.py  briefing_engine.py  chatgpt_actions.py  cli.py  command_safety.py  commitment_tracker.py  context.py  context_engine.py  database.py  entity_extractor.py  flush_manager.py  intent_parser.py  mcp_server.py  receiver.py  speaker_manager.py  summary_manager.py  transcriber.py  vector_store.py  zoom_connector.py
tests/: conftest.py  test_audio_endpoint.py  test_briefing_engine.py  test_command_safety.py  test_commitment_tracker.py  test_context_engine.py  test_database.py  test_entity_extractor.py  test_intent_parser.py  test_mcp_server.py  test_receiver.py  test_speaker_auth.py  test_vector_store.py
tools/: granola_import.py
watch-app/: DEPLOY.md  Package.swift  README.md  project.yml  setup-xcode.sh
x-posting/: post.py  tweet-bank.md
(+33 files in other folders)
